Добыча руды и нефти с затратами запасов и энергии

--- a/player/templates/player/overview.html
+++ b/player/templates/player/overview.html
@@ -2,4 +2,7 @@
 <br>
 Ты находишься в регионе {{ player.region }}
 <br>
-Добыча ресурсов
+<br>
+Действия:
+<br>
+<a href="/mining">Добыча ресурсов в регионе</a>
