--- a/party/templates/party/party.html
+++ b/party/templates/party/party.html
@@ -4,7 +4,7 @@
 {% load static %}
 
 {% block for_scripts_and_css %}
-<script src='{% static "party.js" %}?{{ csrf_token }}'></script>
+<script src='{% static "js/party.js" %}?{{ csrf_token }}'></script>
 {% endblock %}
 
 {% block content %}
