--- a/party/templates/party/party.html
+++ b/party/templates/party/party.html
@@ -1,6 +1,11 @@
 {% extends 'player/header.html' %}
 {% load party_blocks.no_party %}
 {% load party_blocks.has_party %}
+{% load static %}
+
+{% block for_scripts_and_css %}
+<script src='{% static "party.js" %}?{{ csrf_token }}'></script>
+{% endblock %}
 
 {% block content %}
     {% if player.party %}
