--- a/player/templates/player/header.html
+++ b/player/templates/player/header.html
@@ -1,8 +1,12 @@
 <html>
+{% load static %}
 {% load bootstrap3 %}
 <script src="{% bootstrap_jquery_url %}"></script>
 {% bootstrap_javascript %}
 {% bootstrap_css %}
+
+{% block for_scripts_and_css %}
+{% endblock %}
 
 {% load static %}
 {% load player_status %}
