--- a/storage/templates/storage/storage.html
+++ b/storage/templates/storage/storage.html
@@ -3,14 +3,10 @@
 {% load storage_blocks.has_storage %}
 {% load static %}
 
-{% block for_scripts_and_css %}
-<!--<script src='{% static "js/party.js" %}?{{ csrf_token }}'></script>-->
-{% endblock %}
-
 {% block content %}
     {% if storage %}
        {% has_storage storage %}
     {% else %}
-        {% no_storage %}
+        {% no_storage player %}
     {% endif %}
 {% endblock %}
