--- a/storage/templates/storage/assets.html
+++ b/storage/templates/storage/assets.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% load get_attr %}
 {% load dict_key %}
+{% load define %}
 
 
 {% block for_scripts_and_css %}
@@ -9,59 +10,54 @@
 {% endblock %}
 
 {% block content %}
-{% for storage in storages %}
-<div class="row">
-Владелец: {{ storage.owner }}
-</div>
-<div class="row">
-Регион: {{ storage.region }}
-</div>
-<br>
+<ul class="nav nav-tabs">
+    {% for storage in storages %}
+    <li {% if forloop.first %}class="active"{% endif %}>
+        <a data-toggle="tab" href="#{{ storage.pk }}">{{ storage.region }}</a>
+    </li>
+    {% endfor %}
+</ul>
 
-{% for mineral in storage.minerals %}
-    {% if storage|get_attr:mineral %}
-<div class="row">
-    {{ storage.minerals|dict_key:mineral }}: {{ storage|get_attr:mineral }}
-</div>
-    {% endif %}
-{% endfor %}
-<br>
+<div class="tab-content">
+    {% for storage in storages %}
+    <div class="tab-pane {% if forloop.first %}active{% endif %}" id="{{ storage.pk }}">
+        <div class="col-xs-2 col-sm-2 col-md-2">
+            {{ storage.valut|dict_key:'cash' }}: {{ storage|get_attr:'cash' }}
+        </div>
 
-{% for oil in storage.oils %}
-    {% if storage|get_attr:oil %}
-<div class="row">
-    {{ storage.oils|dict_key:oil }}: {{ storage|get_attr:oil }}
-</div>
-    {% endif %}
-{% endfor %}
-<br>
-<!--<div class="row">-->
-<!--Руда-->
-<!--</div>-->
-<!--<div class="row">-->
-<!--Анохор: {{ storage.anohor }}-->
-<!--</div>-->
-<!--<div class="row">-->
-<!--Берконор: {{ storage.berkonor }}-->
-<!--</div>-->
-<!--<div class="row">-->
-<!--Гроксит: {{ storage.grokcite }}-->
-<!--</div>-->
-<!--<br>-->
+        {% for mineral in storage.minerals %}
+        {% if storage|get_attr:mineral %}
+        <div class="col-xs-2 col-sm-2 col-md-2">
+            {{ storage.minerals|dict_key:mineral }}: {{ storage|get_attr:mineral }}
+        </div>
+        {% endif %}
+        {% endfor %}
 
-<!--<div class="row">-->
-<!--Нефть-->
-<!--</div>-->
-<!--<div class="row">-->
-<!--WTI: {{ storage.wti_oil }}-->
-<!--</div>-->
-<!--<div class="row">-->
-<!--Brent: {{ storage.brent_oil }}-->
-<!--</div>-->
-<!--<div class="row">-->
-<!--Urals: {{ storage.urals_oil }}-->
-<!--</div>-->
-<!--<br>-->
-<!--<br>-->
-{% endfor %}
+        {% for oil in storage.oils %}
+        {% if storage|get_attr:oil %}
+        <div class="col-xs-2 col-sm-2 col-md-2">
+            {{ storage.oils|dict_key:oil }}: {{ storage|get_attr:oil }}
+        </div>
+        {% endif %}
+        {% endfor %}
+
+        {% for material in storage.materials %}
+        {% if storage|get_attr:material %}
+        <div class="col-xs-2 col-sm-2 col-md-2">
+            {{ storage.materials|dict_key:material }}: {{ storage|get_attr:material }}
+        </div>
+        {% endif %}
+        {% endfor %}
+
+        {% for unit in storage.units %}
+        {% if storage|get_attr:unit %}
+        <div class="col-xs-2 col-sm-2 col-md-2">
+            {{ storage.units|dict_key:unit }}: {{ storage|get_attr:unit }}
+        </div>
+        {% endif %}
+        {% endfor %}
+        
+    </div>
+    {% endfor %}
+</div>
 {% endblock %}
