Заявка в партию унаследована от класса Log

--- a/storage/templates/storage/storage_blocks/no_storage.html
+++ b/storage/templates/storage/storage_blocks/no_storage.html
@@ -5,7 +5,7 @@
 {% endblock %}
 <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12" align="center">
-        У вас нет Склада в этом регионе
+        Склад в регионе {{ player.region }}
     </div>
 </div>
 <div class="row">
