--- a/player/templates/player/overview.html
+++ b/player/templates/player/overview.html
@@ -1,8 +1,46 @@
 {% extends 'player/header.html' %}
-
+{% load static %}
+{% load bootstrap3 %}
+{% load i18n %}
+{% block for_scripts_and_css %}
+<script src="{% bootstrap_jquery_url %}"></script>
+{% bootstrap_javascript %}
+{% bootstrap_css %}
+<link rel="stylesheet" href='{% static "overview.css" %}?{{ csrf_token }}'>
+{% endblock %}
 
 {% block content %}
-Привет, {{ player }} !
-<br>
-Ты находишься в регионе {{ player.region }}
+
+<div class="row" >
+    Привет, {{ player }} !
+    <br>
+    Ты находишься в регионе {{ player.region }}
+    {% get_current_language as LANGUAGE_CODE %}
+    {% get_language_info for LANGUAGE_CODE as lang %}
+    <!-- Tabs -->
+    {{ LANGUAGE_CODE|json_script:"room-name" }}
+    {{ player.pk|json_script:"player_id" }}
+    <ul class="nav nav-tabs">
+        <li class="active"><a data-toggle="tab" href="#{{ language.code }}"><img src="/static/img/{{ LANGUAGE_CODE }}.png" width="30" height="30"> {{ lang.name_local }}</a></li>
+    </ul>
+    <div class="tab-content">
+        <div id="{{ LANGUAGE_CODE }}" class="tab-pane fade in active" style="height: 100%;">
+
+            <div style="height: 50vh; display: flex">
+                <div class="col-xs-12 col-sm-12 col-md-12 chat__content" id="chat-log-{{ LANGUAGE_CODE }}"
+                     style="flex: 10 10 auto; overflow-x: hidden; overflow-y: auto;">
+                </div>
+            </div>
+            <div style="display: flex">
+                <div style="flex: 10 10 auto">
+                    <input id="chat-message-input-{{ LANGUAGE_CODE }}" type="text" size="100" style="width: 100%">
+                </div>
+                <div style="flex: 1 1 auto">
+                    <input id="chat-message-submit-{{ LANGUAGE_CODE }}" type="button" value="Отправить"  style="width: 100%">
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src='{% static "chat.js" %}?{{ csrf_token }}'></script>
+</div>
 {% endblock %}
