--- a/player/templates/player/player_status.html
+++ b/player/templates/player/player_status.html
@@ -1,25 +1,28 @@
 {% load l10n %}{% load i18n %}
-<div class="col-xs-1 col-sm-1 col-md-1">
-    <img src="{{ player.image }}" width="60" height="60">
-</div>
-<div class="col-xs-2 col-sm-2 col-md-2">
-    <div class="row">{{ player.nickname }}</div>
-    <div class="row">
-        <div class="col-xs-6 col-sm-6 col-md-6" align="left">
-            <b style="color: #85bb65" id="cash" data-text="{{ player.cash }}">${{ player.cash }}</b>
-        </div>
-        <div class="col-xs-6 col-sm-6 col-md-6" align="right">
-            <b style="color: gold" id="gold" data-text="{{ player.gold }}">{{ player.gold }}</b>
-        </div>
+<div style="width: 100%; max-height: 100px; display: flex; align-items: stretch">
+<!--<div style="width: 1300px">-->
+    <div class="col-xs-2 col-sm-2 col-md-1">
+        <img src="{{ player.image }}" style="height: 100%">
     </div>
-    <div class="row">уровень {{ player.level }}</div>
-</div>
-<div class="col-xs-8 col-sm-8 col-md-8">
-    <div class="row">энергии: {{ player.energy }}%</div>
-    <div class="row">
-        <form method="POST" action="{% url 'do_mining' %}" enctype="multipart/form-data">
-            {% csrf_token %}
-            <button type="submit" enctype="multipart/form-data" class="save btn btn-default">Пополнить</button>
-        </form>
+    <div class="col-xs-2 col-sm-2 col-md-2">
+        <div class="row">{{ player.nickname }}</div>
+        <div class="row">
+            <div class="col-xs-6 col-sm-6 col-md-6" align="left">
+                <b style="color: #85bb65" id="cash" data-text="{{ player.cash }}">${{ player.cash }}</b>
+            </div>
+            <div class="col-xs-6 col-sm-6 col-md-6" align="right">
+                <b style="color: gold" id="gold" data-text="{{ player.gold }}">{{ player.gold }}</b>
+            </div>
+        </div>
+        <div class="row">уровень {{ player.level }}</div>
+    </div>
+    <div class="col-xs-8 col-sm-8 col-md-8">
+        <div class="row">энергии: {{ player.energy }}%</div>
+        <div class="row">
+            <form method="POST" action="{% url 'do_mining' %}" enctype="multipart/form-data">
+                {% csrf_token %}
+                <button type="submit" enctype="multipart/form-data" class="save btn btn-default">Пополнить</button>
+            </form>
+        </div>
     </div>
 </div>
