--- a/player/templates/player/menu.html
+++ b/player/templates/player/menu.html
@@ -1,5 +1,6 @@
 <a href="/">Обзор</a>
 <br><br><a href="/mining">Добыча ресурсов</a>
+<br><br><a href="/map">Карта</a>
 <br><br><a href="/party">Партия</a>
 <br><br><a href="/storage">Склад</a>
 <br><br><a href="/assets">Активы</a>
