--- a/region/templates/region/mining.html
+++ b/region/templates/region/mining.html
@@ -37,7 +37,7 @@
 <br>
 Запасы: {{ player.region.ore_has }} / {{ player.region.ore_cap }}
 <br>
-Качество руды: {{ player.region.anohor_proc }}% / {{ player.region.berkonor_proc }}% / {{ player.region.grokcite_proc }}%
+Качество руды: {{ player.region.coal_proc }}% / {{ player.region.iron_proc }}% / {{ player.region.bauxite_proc }}%
 <br>
 <br>
 <form method="POST" action="{% url 'do_mining' %}" enctype="multipart/form-data">
