Герб региона в информации о партии

--- a/party/templates/party/party_blocks/has_party.html
+++ b/party/templates/party/party_blocks/has_party.html
@@ -20,7 +20,9 @@
             {% endif %}
             <br>
             <div>
-                <font color="black" size="4">регион: </font>{{ player.party.region.on_map_id }}<font color="black" size="4">{{ player.party.region.region_name }}</font>
+                <font color="black" size="4">регион: </font>
+                <img src='static/img/regions/{{ player.party.region.on_map_id }}.png' class='image' width='30' height='30'>
+                <font color="black" size="4">{{ player.party.region.region_name }}</font>
             </div>
             <br>
             <font color="black" size="4">Численность: {{ members_count }} человек</font>
